# Impi

./: .gitignore  CMakeLists.txt  README.md  diary.xlsx  structure.txt
Application/: CMakeLists.txt
Application/App/: Appmain.cpp
Application/math/: Matrix.cpp  Quaternion.cpp  Vector3.cpp  random.cpp
Application/opengl/: CubeMesh.cpp  LineMesh.cpp  Renderer.cpp  Shader.cpp  SphereMesh.cpp
Application/physics/: PhysicsWorld.cpp
Application/physics/Objects/: Cloth.cpp  Firework.cpp  FireworkSystem.cpp
Application/physics/Particle_System/: ClothParticle.cpp  Constraint.cpp  Particle.cpp  ParticleContacts.cpp  ParticleForceGenerators.cpp  ParticleForceRegistry.cpp  ParticleLinks.cpp  ParticleWorld.cpp
Application/physics/RigidBody_System/: BoundingSphere.cpp  BoundingVolumes.h  CollisionDetector.cpp  Contact.cpp  ContactResolver.cpp  ForceGenerators.cpp  ForceRegistry.cpp  IntersectionTests.cpp  RigidBody.cpp
Application/physics/Spatial/: BoundingSphere.cpp  UniformGrid.cpp
Application/scenes/: BoxBoxScene.cpp  ClothScene.cpp  FireWorkScene.cpp  MobileScene.cpp  RopeScene.cpp  Scene.cpp
Application/shaders/: cloth.frag  cloth.vert  fireworks.frag  fireworks.vert  impi_grid.frag  impi_grid.vert  impi_line.frag  impi_line.vert  impi_passthrough.vert
Application/tools/: Camera.cpp  Logger.cpp  Raycaster.cpp  Shader.cpp
Impi/: Impi.vcxproj  Impi.vcxproj.filters  RenderableParticle.i  Scene.i  Shader.i  SphereMesh.i  Vector3.i  gl.c  glad.c  main.cpp  main.i  particle.i
Impi/core/: Vector3.cpp
Impi/headers/: particle.h  precision.h
Impi/headers/data/: Scene.h
Impi/headers/rendering/assets/: RenderableParticle.h  Sphere.h  SphereMesh.h
Impi/scenes/: Scene.cpp  Scene.h
Impi/scenes/ballistics/: Ballistics.cpp  Ballistics.h
Impi/scenes/ballistics/shaders/: shader.vert
Impi/scenes/commons/shaders/: basic.vert
Impi/src/: Precision.h  Settings.h  Vector3.cpp  particle.cpp
Impi/src/data/: Scene.cpp
Impi/src/math/: Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  Vector3.cpp  Vector3.h  random.cpp  random.h
Impi/src/physics/: Cloth.cpp  Cloth.h  ClothParticle.cpp  ClothParticle.h  Constraint.cpp  Constraint.h  Firework.cpp  Firework.h  ForceGenerators.cpp  ForceGenerators.h  ForceRegistry.h  Particle.cpp  Particle.h  ParticleContacts.cpp  ParticleContacts.h  ParticleForceGenerators.cpp  ParticleForceGenerators.h  ParticleForceRegistry.cpp  ParticleForceRegistry.h  ParticleLinks.cpp  ParticleLinks.h  ParticleWorld.cpp  ParticleWorld.h  RigidBody.cpp  RigidBody.h  Vector3.h
Impi/src/physics/Objects/: Cloth.cpp  Cloth.h  Firework.cpp  Firework.h
Impi/src/physics/Particle_System/: Constraint.h  Particle.cpp  Particle.h  ParticleForceGenerators.h  ParticleForceRegistry.h  ParticleLinks.h  ParticleWorld.h
Impi/src/physics/RigidBody_System/: BoundingSphere.cpp  BoundingVolumes.h  Collide_fine.h  Collide_hoarse.h  CollisionDetector.cpp  CollisionDetector.h  CollisionPrimitives.h  Contact.cpp  Contact.h  ContactResolver.cpp  ContactResolver.h  ForceGenerators.h  ForceRegistry.cpp  IntersectionTests.cpp  IntersectionTests.h  RigidBody.cpp  RigidBody.h
Impi/src/rendering/assets/: CubeMesh.cpp  LineMesh.cpp  LineMesh.h  Mesh.cpp  Mesh.h  PlaneMesh.h  RenderableParticle.cpp  RenderableParticle.h  RenderableRigidBody.h  SphereMesh.cpp  SphereParticle.h
Impi/src/rendering/core/: Camera.cpp  Camera.h  Raycaster.cpp  Raycaster.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ViewPort.h  ViewUniforms.h
Impi/src/scenes/: Scene.cpp  Scene.h
Impi/src/scenes/BoxBox/: BoxBoxScene.cpp  BoxBoxScene.h
Impi/src/scenes/BoxBox/shaders/: box.vert
Impi/src/scenes/Fluid/: Fluid.cpp  Fluid.h
Impi/src/scenes/Fluid/shaders/: fluid.comp  fluid.frag  fluid.vert  volume.frag  volume.vert
Impi/src/scenes/ballistics/: Ballistics.cpp  Ballistics.h
Impi/src/scenes/ballistics/shaders/: shader.frag  shader.vert
Impi/src/scenes/cloth/: Cloth.cpp  Cloth.h  ClothScene.cpp
Impi/src/scenes/clothscene/: ClothScene.cpp  ClothScene.h
Impi/src/scenes/clothscene/shaders/: cloth.frag  cloth.vert
Impi/src/scenes/commons/shaders/: basic.frag  basic.vert  grid.frag  grid.vert  line.frag  line.vert
Impi/src/scenes/fireworks/: FireWorkScene.cpp  FireWorkScene.h
Impi/src/scenes/fireworks/shaders/: fireworks.frag  fireworks.vert
Impi/src/scenes/mobile/: MobileScene.cpp  MobileScene.h
Impi/src/scenes/ropescene/: RopeScene.cpp  RopeScene.h
Impi/src/scenes/ropescene/shaders/: rope.vert
includes/App/: Window.h
includes/math/: Matrix.h  Quaternion.h  Vector3.h  random.h
includes/model/: GltfAnimationChannel.h  GltfAnimationClip.h  GltfInstance.h  GltfModel.h  GltfNode.h  IKSolver.h  MeshPrimitive.h  ModelLoader.h  ModelSettings.h
includes/opengl/: CoordArrowsModel.h  Framebuffer.h  LineMesh.h  Mesh.h  OGLRenderData.h  OGLRenderer.h  RenderableParticle.h  RenderableRigidBody.h  Renderer.h  Shader.h  ShaderStorageBuffer.h  Texture.h  TextureBuffer.h  UniformBuffer.h  VertexBuffer.h
includes/physics/: PhysicsWorld.h  Precision.h
includes/physics/Objects/: Cloth.h  Firework.h  FireworkSystem.h
includes/physics/Particle_System/: ClothParticle.h  Constraint.h  Particle.h  ParticleContacts.h  ParticleForceGenerators.h  ParticleForceRegistry.h  ParticleLinks.h  ParticleWorld.h
includes/physics/RigidBody_System/: CollisionDetector.h  CollisionPrimitives.h  Contact.h  ContactResolver.h  ForceGenerators.h  ForceRegistry.h  IntersectionTests.h  RigidBody.h
includes/physics/Spatial/: BVHnode.h  BroadPhase.h  UniformGrid.h
includes/scenes/: BoxBoxScene.h  ClothScene.h  FireWorkScene.h  MobileScene.h  RopeScene.h  Scene.h
includes/tools/: Camera.h  Logger.h  Raycaster.h  Timer.h  UserInterface.h  ViewPort.h
